--- a/docker/application.yml
+++ b/docker/application.yml
@@ -6,13 +6,13 @@ lavalink:
     password: "bonsoirDocker"
     sources:
       youtube: true
-      bandcamp: true
-      soundcloud: true
+      bandcamp: false
+      soundcloud: false
       twitch: true
-      vimeo: true
+      vimeo: false
       http: true
       local: false
-    bufferDurationMs: 400 # The duration of the NAS buffer. Higher values fare better against longer GC pauses. Minimum of 40ms, lower values may introduce pauses.
+    bufferDurationMs: 200 # The duration of the NAS buffer. Higher values fare better against longer GC pauses. Minimum of 40ms, lower values may introduce pauses.
     frameBufferDurationMs: 5000 # How many milliseconds of audio to keep buffered
     trackStuckThresholdMs: 10000  # The threshold for how long a track can be stuck. A track is stuck if does not return any audio data.
     youtubePlaylistLoadLimit: 6 # Number of pages at 100 each
