--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ByAgus314/Java-s-bot-music.git"
+    "url": "https://github.com/ByAgus314/Java-s-Bot-Music-repo.git"
   },
   "engines": {
     "node": "^12.x"
@@ -27,9 +27,9 @@
   "author": "SudhanPlayz",
   "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/SudhanPlayz/Discord-MusicBot/issues"
+    "url": "https://github.com/ByAgus314/Java-s-Bot-Music-repo"
   },
-  "homepage": "https://github.com/SudhanPlayz/Discord-MusicBot#readme",
+  "homepage": "https://github.com/ByAgus314/Java-s-Bot-Music-repo",
   "dependencies": {
     "colors": "^1.4.0",
     "cpu-stat": "^2.0.1",
